[gd_scene load_steps=38 format=3 uid="uid://cccosrsc7gc5w"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_e2grr"]
[ext_resource type="AudioStream" uid="uid://dsjykmjg2eiw6" path="res://assets/audio/sfx/game/pass.wav" id="3_2ki4d"]
[ext_resource type="PackedScene" uid="uid://bqkxk7t577kq2" path="res://scenes/game/rank_track/rank_track.tscn" id="4_5g0mk"]
[ext_resource type="AudioStream" uid="uid://cdlts74gpstjy" path="res://assets/audio/sfx/game/pass_for_good.wav" id="4_70hh2"]
[ext_resource type="AudioStream" uid="uid://dclx3n1ct4hhg" path="res://assets/audio/sfx/game/cast_arcana_card.wav" id="5_jo5lo"]
[ext_resource type="AudioStream" uid="uid://dkmmfdxbt40rr" path="res://assets/audio/sfx/game/battle_begin.wav" id="5_msab6"]
[ext_resource type="PackedScene" uid="uid://b577200ddlglu" path="res://scenes/game/map/map.tscn" id="6_w5r8f"]
[ext_resource type="Script" path="res://scenes/audio/audio.gd" id="7_370e0"]
[ext_resource type="AudioStream" uid="uid://i0u25rnw4ym2" path="res://assets/audio/music/HellGameOst2_3_16_dither_normalized_.wav" id="7_gem5n"]
[ext_resource type="AudioStream" uid="uid://b3rldghvrhqln" path="res://assets/audio/sfx/game/walk_the_earth.wav" id="7_jm1ey"]
[ext_resource type="PackedScene" uid="uid://d00aywoo0y4ld" path="res://scenes/ui/ui.tscn" id="10_kjlhk"]
[ext_resource type="Script" path="res://scenes/game/map/camera.gd" id="11_oe2ei"]
[ext_resource type="PackedScene" uid="uid://bs53uu056xcwu" path="res://scenes/game/sequence_of_play/sequence_of_play.tscn" id="12_hn5jr"]
[ext_resource type="AudioStream" uid="uid://b8iv5j6jeo6p8" path="res://assets/audio/voice/it_is_our_turn.mp3" id="12_i5u37"]
[ext_resource type="Script" path="res://scenes/game/debug/debug.gd" id="13_0j48s"]
[ext_resource type="AudioStream" uid="uid://capnasi6ubod6" path="res://assets/audio/voice/hell_phase.mp3" id="13_n4j0r"]
[ext_resource type="AudioStream" uid="uid://cmay8l5ayxm2m" path="res://assets/audio/voice/soul_phase.mp3" id="14_lpxvq"]
[ext_resource type="Script" path="res://scenes/game/phases/hell.gd" id="14_qsi5j"]
[ext_resource type="AudioStream" uid="uid://d4l4ntuqr746k" path="res://assets/audio/voice/summoning_phase.mp3" id="15_f0248"]
[ext_resource type="Script" path="res://scenes/game/phases/soul.gd" id="15_hlf63"]
[ext_resource type="AudioStream" uid="uid://y75onbosi81p" path="res://assets/audio/voice/action_phase.mp3" id="16_cebjf"]
[ext_resource type="Script" path="res://scenes/game/phases/summoning.gd" id="16_nqqpm"]
[ext_resource type="AudioStream" uid="uid://ck4iqj7y24f6e" path="res://assets/audio/voice/combat_phase.mp3" id="17_kmq8h"]
[ext_resource type="Script" path="res://scenes/game/phases/action.gd" id="17_w1lge"]
[ext_resource type="Script" path="res://scenes/game/phases/combat.gd" id="18_j7r7q"]
[ext_resource type="AudioStream" uid="uid://uqhdchurh32h" path="res://assets/audio/voice/petiton_phase.mp3" id="18_sm1dr"]
[ext_resource type="AudioStream" uid="uid://b2mfccos4ag54" path="res://assets/audio/voice/enemy_enteres_sectio.mp3" id="19_5khd4"]
[ext_resource type="Script" path="res://scenes/game/phases/petition.gd" id="19_gjj7y"]
[ext_resource type="AudioStream" uid="uid://cpe4qsdmnja0x" path="res://assets/audio/voice/enemy_fled.mp3" id="20_mtuf8"]
[ext_resource type="Script" path="res://scenes/game/phases/end.gd" id="20_orwt7"]
[ext_resource type="AudioStream" uid="uid://bmjeur3qyc01g" path="res://assets/audio/voice/enemy_stays_to_fight.mp3" id="21_55x66"]
[ext_resource type="Texture2D" uid="uid://qr14kucrashs" path="res://icon.svg" id="21_x0rao"]
[ext_resource type="AudioStream" uid="uid://ddmomqbe2qusd" path="res://assets/audio/voice/battle_won.mp3" id="22_yacxk"]
[ext_resource type="AudioStream" uid="uid://dxb53k67rmnoy" path="res://assets/audio/voice/battle_lost.mp3" id="23_6lv7b"]

[sub_resource type="Gradient" id="Gradient_s7p8l"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0057s"]
gradient = SubResource("Gradient_s7p8l")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8j4pt"]
load_path = "res://.godot/imported/01797-1837376349-painting of a demon commander with legions in the background.png-870df7a8a64e80ba69f4254241f4178f.ctex"

[node name="Game" type="Control" groups=["Persist"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_e2grr")

[node name="Players" type="Node" parent="."]

[node name="RankTrack" parent="." instance=ExtResource("4_5g0mk")]

[node name="Map" parent="." instance=ExtResource("6_w5r8f")]
unique_name_in_owner = true
position = Vector2(992, 551)

[node name="UI" parent="." instance=ExtResource("10_kjlhk")]

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(955, 542)
script = ExtResource("11_oe2ei")

[node name="PointLight2D" type="PointLight2D" parent="Camera2D"]
visible = false
position = Vector2(40, 21.0001)
scale = Vector2(69.5781, 47.75)
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_0057s")
height = 30.0

[node name="AudioNode2d" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.694118, 0.231373, 0.223529, 1)

[node name="Audio" type="Node" parent="."]
script = ExtResource("7_370e0")

[node name="RemindPlayerTimer" type="Timer" parent="Audio"]
unique_name_in_owner = true
wait_time = 30.0

[node name="Music" type="Node" parent="Audio"]

[node name="MusicAudio" type="AudioStreamPlayer" parent="Audio/Music"]
unique_name_in_owner = true
stream = ExtResource("7_gem5n")
autoplay = true
bus = &"Music"

[node name="Voice" type="Node" parent="Audio"]

[node name="CombatWonAudio" type="AudioStreamPlayer" parent="Audio/Voice"]
unique_name_in_owner = true
stream = ExtResource("22_yacxk")
volume_db = -3.0
bus = &"Voice"

[node name="CombatLostAudio" type="AudioStreamPlayer" parent="Audio/Voice"]
unique_name_in_owner = true
stream = ExtResource("23_6lv7b")
volume_db = -5.0
bus = &"Voice"

[node name="EnemyFleeingAudio" type="AudioStreamPlayer" parent="Audio/Voice"]
unique_name_in_owner = true
stream = ExtResource("20_mtuf8")
volume_db = -3.0
bus = &"Voice"

[node name="EnemyStayingAudio" type="AudioStreamPlayer" parent="Audio/Voice"]
unique_name_in_owner = true
stream = ExtResource("21_55x66")
volume_db = -3.0
bus = &"Voice"

[node name="EnemyEnteringSectioAudio" type="AudioStreamPlayer" parent="Audio/Voice"]
unique_name_in_owner = true
stream = ExtResource("19_5khd4")
volume_db = -3.0
bus = &"Voice"

[node name="playerTurnAudio" type="AudioStreamPlayer" parent="Audio/Voice"]
unique_name_in_owner = true
stream = ExtResource("12_i5u37")
volume_db = -8.0
bus = &"Voice"

[node name="HellPhaseAudio" type="AudioStreamPlayer" parent="Audio/Voice"]
unique_name_in_owner = true
stream = ExtResource("13_n4j0r")
volume_db = -3.0
bus = &"Voice"

[node name="SoulPhaseAudio" type="AudioStreamPlayer" parent="Audio/Voice"]
unique_name_in_owner = true
stream = ExtResource("14_lpxvq")
volume_db = -3.0
bus = &"Voice"

[node name="SummoningPhaseAudio" type="AudioStreamPlayer" parent="Audio/Voice"]
unique_name_in_owner = true
stream = ExtResource("15_f0248")
volume_db = -3.0
bus = &"Voice"

[node name="ActionPhaseAudio" type="AudioStreamPlayer" parent="Audio/Voice"]
unique_name_in_owner = true
stream = ExtResource("16_cebjf")
volume_db = -3.0
bus = &"Voice"

[node name="CombatPhaseAudio" type="AudioStreamPlayer" parent="Audio/Voice"]
unique_name_in_owner = true
stream = ExtResource("17_kmq8h")
volume_db = -3.0
bus = &"Voice"

[node name="PetitionPhaseAudio" type="AudioStreamPlayer" parent="Audio/Voice"]
unique_name_in_owner = true
stream = ExtResource("18_sm1dr")
volume_db = -3.0
bus = &"Voice"

[node name="SFX" type="Node" parent="Audio"]

[node name="PassAudio" type="AudioStreamPlayer" parent="Audio/SFX"]
unique_name_in_owner = true
stream = ExtResource("3_2ki4d")
max_polyphony = 4
bus = &"SFX"

[node name="PassForGoodAudio" type="AudioStreamPlayer" parent="Audio/SFX"]
unique_name_in_owner = true
stream = ExtResource("4_70hh2")
volume_db = 6.0
max_polyphony = 4
bus = &"SFX"

[node name="WalkTheEarthAudio" type="AudioStreamPlayer" parent="Audio/SFX"]
unique_name_in_owner = true
stream = ExtResource("7_jm1ey")
volume_db = 6.0
max_polyphony = 4
bus = &"SFX"

[node name="BattleStartAudio" type="AudioStreamPlayer" parent="Audio/SFX"]
unique_name_in_owner = true
stream = ExtResource("5_msab6")
max_polyphony = 4
bus = &"SFX"

[node name="CastArcanaAudio" type="AudioStreamPlayer" parent="Audio/SFX"]
unique_name_in_owner = true
stream = ExtResource("5_jo5lo")
max_polyphony = 4
bus = &"SFX"

[node name="SequenceOfPlay" parent="." instance=ExtResource("12_hn5jr")]

[node name="Debug" type="Node" parent="."]
script = ExtResource("13_0j48s")

[node name="Hell" type="Node" parent="."]
script = ExtResource("14_qsi5j")

[node name="Soul" type="Node" parent="."]
script = ExtResource("15_hlf63")

[node name="Summoning" type="Node" parent="."]
script = ExtResource("16_nqqpm")

[node name="Action" type="Node" parent="."]
script = ExtResource("17_w1lge")

[node name="Combat" type="Node" parent="."]
script = ExtResource("18_j7r7q")

[node name="Petition" type="Node" parent="."]
script = ExtResource("19_gjj7y")

[node name="End" type="Node" parent="."]
script = ExtResource("20_orwt7")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(50, 50, 50, 1)
position = Vector2(822, 1442)
texture = ExtResource("21_x0rao")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
self_modulate = Color(2, 2, 2, 1)
layout_mode = 0
offset_left = 61.0
offset_top = 310.0
offset_right = 573.0
offset_bottom = 822.0
texture = SubResource("CompressedTexture2D_8j4pt")

[connection signal="timeout" from="Audio/RemindPlayerTimer" to="Audio" method="_on_remind_player_timer_timeout"]
[connection signal="finished" from="Audio/Music/MusicAudio" to="Audio" method="_on_music_audio_finished"]
